# onyxia

./: .gitignore
.github/workflows/: onyxia-gke-ephemeral.yml
docs/conductor/: 2026-05-17-contributor-catalog-research-note.md  2026-05-17-gcs-uat-traceability.md  2026-05-17-onyxia-contributor-catalog-conductor.md  2026-05-17-status-report.md  2026-05-18-active-priority-structure.md  2026-05-18-agent-operating-mode.md  2026-05-18-gcs-sts-live-diagnosis.md  2026-05-18-plan-crosswalk.md  2026-05-18-priority-reorientation.md  2026-05-19-dataviz-quota-blocker.md
docs/contributor-catalog/: README.md  catalog-item.schema.json  validate.mjs
docs/contributor-catalog/items/: api-catalog.json  api-gouv.json  data-gouv.json  gcs-storage.json  iceberg-polaris.json  matchid-backend.json  matchid-deces.json  mcp-catalog.json  sent-tech-mcp.json
docs/proposals/: 2026-05-18-inter-paas-management-priority.md
docs/superpowers/plans/: 2026-05-16-datagouv-airflow-connector-plan.md  2026-05-16-iceberg-polaris-plan.md  2026-05-16-onyxia-gcs-storage-plan.md  2026-05-16-onyxia-sentropic-theme-plan.md
docs/superpowers/specs/: 2026-05-16-datagouv-airflow-connector-design.md  2026-05-16-iceberg-lakehouse-catalog-design.md  (+2 more)
helm-chart/examples/gke-ephemeral/sts-bridge/: Dockerfile  pyproject.toml
helm-chart/examples/gke-ephemeral/sts-bridge/app/: config.py  gcp_provision.py  jwt_verify.py  main.py  rotate.py  sts_xml.py
helm-chart/examples/gke-ephemeral/sts-bridge/tests/: test_config.py  test_gcp_provision.py  test_jwt_verify.py  test_main.py  test_rotate.py  test_sts_xml.py
(+40 files in other folders)
