[project]
name = "onyxia-gcs-sts-bridge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "python-jose[cryptography]==3.3.0",
  "google-cloud-iam==2.15.2",
  "google-cloud-storage==2.18.2",
  "google-api-python-client==2.149.0",
  "kubernetes==30.1.0",
  "httpx==0.27.2",
]

[project.optional-dependencies]
test = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "respx==0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
